Build installers: typo

--- a/.github/workflows/installers.yaml
+++ b/.github/workflows/installers.yaml
@@ -28,7 +28,7 @@ jobs:
   build-linux-zip:
     if: |
       contains(github.event.head_commit.message, 'bump version') ||
-      contains(github.event.head_commit.message, 'build installers)
+      contains(github.event.head_commit.message, 'build installers')
     runs-on: ubuntu-20.04
 
     steps:
@@ -81,7 +81,7 @@ jobs:
   build-windows-inno:
     if: |
       contains(github.event.head_commit.message, 'bump version') ||
-      contains(github.event.head_commit.message, 'build installers)
+      contains(github.event.head_commit.message, 'build installers')
     runs-on: windows-latest
 
     steps:
@@ -126,7 +126,7 @@ jobs:
   build-windows-zip:
     if: |
       contains(github.event.head_commit.message, 'bump version') ||
-      contains(github.event.head_commit.message, 'build installers)
+      contains(github.event.head_commit.message, 'build installers')
     runs-on: windows-latest
 
     steps:
@@ -170,7 +170,7 @@ jobs:
   build-macos-zip:
     if: |
       contains(github.event.head_commit.message, 'bump version') ||
-      contains(github.event.head_commit.message, 'build installers)
+      contains(github.event.head_commit.message, 'build installers')
     runs-on: macos-latest
 
     steps:
