--- a/.github/workflows/installers.yaml
+++ b/.github/workflows/installers.yaml
@@ -28,7 +28,7 @@ jobs:
   build-linux-zip:
     if: |
       contains(github.event.head_commit.message, 'bump version') ||
-      contains(github.event.head_commit.message, 'build installers')
+      contains(github.event.head_commit.message, 'build X installers')
     runs-on: ubuntu-20.04
 
     steps:
@@ -104,6 +104,9 @@ jobs:
       - name: Build Artifact
         run: flutter build windows
 
+      - name: Check the Generated Files
+        run: dir /s build\windows\x64\runner\Release\
+        
       - name: Get Version from pubspec.yaml
         run: |
           $version = (Get-Content pubspec.yaml | Select-String '^version:[^^]*' | ForEach-Object { $_.ToString().Split(":")[1].Trim().Split("+")[0].Trim() })
@@ -126,7 +129,7 @@ jobs:
   build-windows-zip:
     if: |
       contains(github.event.head_commit.message, 'bump version') ||
-      contains(github.event.head_commit.message, 'build installers')
+      contains(github.event.head_commit.message, 'build X installers')
     runs-on: windows-latest
 
     steps:
@@ -170,7 +173,7 @@ jobs:
   build-macos-zip:
     if: |
       contains(github.event.head_commit.message, 'bump version') ||
-      contains(github.event.head_commit.message, 'build installers')
+      contains(github.event.head_commit.message, 'build X installers')
     runs-on: macos-latest
 
     steps:
