Add datasets. Add tooltips.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   flutter_svg: ^2.0.7
   gap: ^3.0.1
   intl: ^0.19.0
+  markdown_tooltip:
+    git:
+      url: https://github.com/gjwgit/markdown_tooltip
+      ref: dev
   package_info_plus: ^8.0.0
   path: ^1.8.3
   path_provider: ^2.1.3
@@ -115,6 +119,8 @@ flutter:
   # in flutter_markdown.
 
   assets:
+    - assets/data/audit.csv
+    - assets/data/movies.csv
     - assets/data/weather.csv
     - assets/images/favicon_small.png
     - assets/icons/icon.png
