Update linux desktop support.

--- a/installers/rattle_opt.desktop
+++ b/installers/rattle_opt.desktop
@@ -3,6 +3,6 @@
 Version=1.0
 Terminal=false
 Type=Application
-Name=RattleNG
+Name=Rattle
 Exec=/usr/local/bin/rattle
 Icon=/opt/rattleng/rattle.png
