Add new demo dataset: sherlock.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,6 +107,7 @@ flutter:
   assets:
     - assets/data/audit.csv
     - assets/data/movies.csv
+    - assets/data/sherlock.txt
     - assets/data/weather.csv
     - assets/images/favicon_small.png
     - assets/icons/icon.png
