--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   url_launcher: ^6.3.0
   window_manager: ^0.4.3
   xterm: ^4.0.0
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
