Updated images for overview pages.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,8 +115,10 @@ flutter:
     - assets/icons/icon.png
     - assets/markdown/
     - assets/r/
+    - assets/svg/cluster.svg
     - assets/svg/explore.svg
     - assets/svg/generic.svg
+    - assets/svg/model.svg
 
   # Use a fixed width Ubuntu font for the Log tab.
 
