Add graphics for tree/boots/forest

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,9 +115,7 @@ flutter:
     - assets/icons/icon.png
     - assets/markdown/
     - assets/r/
-    - assets/svg/explore.svg
-    - assets/svg/generic.svg
-    - assets/svg/model.svg
+    - assets/svg/
 
   # Use a fixed width Ubuntu font for the Log tab.
 
