retrieve the git history locally

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   url_launcher: ^6.3.0
   window_manager: ^0.4.3
   xterm: ^4.0.0
+  git: ^2.3.0
 
 dev_dependencies:
   flutter_test:
