--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ version: 6.3.48+163
 environment:
   sdk: '>=3.0.5 <4.0.0'
 
-# Automatically upgrade package dependencies to the latest versions:
+# To automatically upgrade package dependencies:
 #
 # `flutter pub upgrade --major-versions`.
 #
