--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: rattle
 description: Rattle Data Science Next Generation
 publish_to: 'none'
-version: 6.3.52+165
+version: 6.3.53+166
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
@@ -45,7 +45,9 @@ dependencies:
   flutter_svg: ^2.0.7
   gap: ^3.0.1
   intl: ^0.20.1
-  markdown_tooltip: ^0.0.2
+  markdown_tooltip: ^0.0.6
+# markdown_tooltip:
+#   path: markdown_tooltip
   package_info_plus: ^8.0.0
   path: ^1.8.3
   path_provider: ^2.1.3
